# sphinxcontrib-issuetracker

./: .gitignore  .tmuxp.yaml  .travis.yml  CHANGES.md  CHANGES.rst  CREDITS  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  docs.yml
doc/: conf.py  configuration.rst  customization.rst  index.rst  usage.rst
docs/: Makefile  conf.py  configuration.md  configuration.rst  customization.md  index.md  index.rst  usage.md
sphinx_autoissues/: __init__.py  resolvers.py  types.py  utils.py
sphinxcontrib/: __init__.py
sphinxcontrib/issuetracker/: __init__.py  resolvers.py
tests/: conftest.py  pypi.py  test_builtin_trackers.py  test_lookup.py  test_pypi.py  test_resolval.py  test_role.py  test_setup.py  test_stylesheet.py  test_tracker_config.py  test_transformer.py
